Prevent content from shifting due to scrollbar on/off

--- a/src/css/00_base/base.scss
+++ b/src/css/00_base/base.scss
@@ -3,6 +3,11 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.4;
+
+  @media (min-width: $tabletBreakpoint) {
+    overflow-x: hidden;
+    width: 100vw;
+  }
 }
 
 html,
